Se corrigen errores de ortografía

--- a/templates/dashboard/register.html
+++ b/templates/dashboard/register.html
@@ -108,7 +108,7 @@
                 </div> -->
                 <button type="submit" class="btn btn-primary block full-width m-b">Activar Cuenta</button>
 
-                <p class="text-muted text-center"><small>¿Ya posse una cuenta activa?</small></p>
+                <p class="text-muted text-center"><small>¿Ya posee una cuenta activa?</small></p>
                 <a class="btn btn-sm btn-white btn-block" href="{% url 'login' %}"">Login</a>
             </form>
             <p class="m-t"> <small>Developed By <a href="#" >SpringLabs</a> &copy; 2018</small> </p>
