--- a/templates/empleados/perfil.html
+++ b/templates/empleados/perfil.html
@@ -412,7 +412,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-12">
-                                <label>Tlf</label>
+                                <label>Teléfono</label>
                                 <!-- <input class="touchspin1" type="text" value="" name="demo1"> -->
                                 {{ form.tlf }}
                             </div>
