Corregidos errores en módulo de activación de cuentas

--- a/templates/dashboard/register.html
+++ b/templates/dashboard/register.html
@@ -73,6 +73,15 @@
       </div>
     {%endif%}
 
+    {% if mensaje == 2 %}
+      <div class="container">
+        <div class="alert alert-dismissable alert-danger">
+        <button type="button" class="close" data-dismiss="alert"></button>
+         <strong>El correo electrónico suministrado no se encuentra registrado en nuestro sistema</strong> 
+      </div>
+    {%endif%}
+
+
 
     <div class="middle-box text-center loginscreen   animated fadeInDown">
 
