Crud etapa 2, falta confirmar, mostrar imágenes, aceptar

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -121,7 +121,7 @@
             <button class="btn btn-info  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 1"><i class="fa fa-user-circle"></i></button>
             </a>
 
-             {% elif etapa == 2 %}
+             {% elif etapa == 2 or etapa == 3 %}
 
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 1, COMPLETADA"><i class="fa fa-user-circle"></i></button>
 
