Terminada la etapa 2 pero sin añadir a licencia de conducir

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -129,6 +129,17 @@
             <button class="btn btn-warning  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 2"><i class="fa fa-address-book" ></i></button>
             </a> 
 
+            {% elif etapa == 4 %}
+
+            <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 1, COMPLETADA"><i class="fa fa-user-circle"></i></button>
+
+            <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 2, COMPLETADA"><i class="fa fa-address-book" ></i></button>
+
+            <a href="">
+            <button class="btn btn-success  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 3"><i class="fa fa-address-card-o" ></i></button>
+            </a> 
+
+
              {% endif %}
 
         </div>
