--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -135,7 +135,7 @@
 
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 2, COMPLETADA"><i class="fa fa-address-book" ></i></button>
 
-            <a href="">
+            <a href="{% url 'etapa-3' %}">
             <button class="btn btn-success  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 3"><i class="fa fa-address-card-o" ></i></button>
             </a> 
 
