--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -146,7 +146,7 @@
 
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top"  title="Etapa 3, COMPLETADA"><i class="fa fa-address-card-o" ></i></button>
 
-            <a href="">
+            <a href="{% url 'etapa-4' %}">
             <button class="btn btn-danger  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 4"><i class="fa fa-group" ></i></button>
             </a> 
 
