--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -147,7 +147,21 @@
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top"  title="Etapa 3, COMPLETADA"><i class="fa fa-address-card-o" ></i></button>
 
             <a href="{% url 'etapa-4' %}">
-            <button class="btn btn-danger  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 4"><i class="fa fa-group" ></i></button>
+            <button class="btn btn-danger  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="right" title="Etapa 4"><i class="fa fa-group" ></i></button>
+            </a> 
+
+            {% elif etapa == 8 or etapa == 9 %}
+
+            <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 1, COMPLETADA"><i class="fa fa-user-circle"></i></button>
+
+            <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top"  title="Etapa 2, COMPLETADA"><i class="fa fa-address-book" ></i></button>
+
+            <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top"  title="Etapa 3, COMPLETADA"><i class="fa fa-address-card-o" ></i></button>
+
+            <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="right" title="Etapa 4, COMPLETADA"><i class="fa fa-group" ></i></button>
+
+            <a href="{% url 'etapa-5' %}">
+            <button class="btn btn-primary  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="bottom" title="Etapa 5"><i class="fa fa-graduation-cap" ></i></button>
             </a> 
 
             {% endif %}
