--- a/templates/empleados/etapa_5.html
+++ b/templates/empleados/etapa_5.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>SpringRH | Etapa 4</title>
+    <title>SpringRH | Etapa 5</title>
 
 
     <link rel="icon" type="image/png" href="{% static 'img/icono-springlabs.png' %}" />
@@ -381,7 +381,7 @@
 {% block contenido_header %}
     <div class="row wrapper border-bottom white-bg page-heading">
         <div class="col-sm-4">
-            <h2><strong>ETAPA 4</strong> Información Familiar</h2>
+            <h2><strong>ETAPA 5</strong> Información Profesional</h2>
             <ol class="breadcrumb">
                 <li>
                     <a href="{% url 'home' %}">Inicio</a>
@@ -396,75 +396,6 @@
 
 {% block contenido %}
 
-<div class="wrapper wrapper-content animated fadeIn">
-        <div class="row">
-            <div class="col-lg-12">
 
-                <div class="panel panel-danger">
-                    <div class="panel-heading">
-                        <i class="fa fa-vcard-o"></i> <strong>Sección 1</strong>
-                    </div>
-                    <div class="panel-body">
-
-                        <form class="form-horizontal" method="post" role="form" action="" enctype="multipart/form-data">
-                        {% csrf_token %}
-                            {{formset.management_form}}
-                            {% if tiene_hijos %}
-                                {% if hijos_registrados %}
-                                        {% for hijo in hijos_registrados %}
-                                        <label>HIJO Nro. {{forloop.counter}}</label><br>
-                                        <strong>Nombre: </strong>{{hijo.nombre}}<br>
-                                        <strong>Apellidos paterno: </strong>
-                                        {{hijo.apellido_paterno}}<br>
-                                        <strong>Apellidos materno: </strong>{{hijo.apellido_materno}}<br>
-                                        <strong>Fecha de nacimiento: </strong>{{hijo.fecha_nacimiento}}<br>
-                                         <strong>Edad: </strong>{{hijo.edad}}<br><br>
-                                        {% endfor %}
-                                {% else %}
-                                    {% for form in formset.forms %}
-                                        <div class="form-group has-success"><label class="col-lg-6 control-label">HIJO NRO. {{forloop.counter}}</label>
-                                        </div>
-                                        {{form.as_p}}
-                                        <br>
-                                    {% endfor %}
-                                {% endif %}
-                            {% else %}
-                                {{formCantidadHijos.as_p}}
-                            {% endif %}
-                                
-                    </div>
-
-                </div>
-                <div class="col-lg-12">
-                     <span>
-                        <br>
-                     </span>
-                </div>
-                <div class="lightBoxGallery">
-                {% if tiene_hijos %}
-                    {% if hijos_registrados %}
-                        <div class="col-lg-12">
-                            <a class="btn btn-success btn-rounded" href="{% url 'rechaza4' %}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Editar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a class="btn btn-primary btn-rounded" href="{% url 'confirma4' %}">&nbsp;&nbsp;Confirmar&nbsp;&nbsp;</a>
-                        </div>
-                    {% else %}
-                        <div class="col-lg-12">
-                        <button type="submit" class="btn btn-block btn-rounded btn-primary">Aceptar</button>
-                        </div>
-                    {% endif %}
-                {% else %}
-
-                        <div class="col-lg-12">
-
-                        <button type="submit" class="btn btn-block btn-rounded btn-primary">Aceptar</button>
-                        </div>
-
-                {% endif %}
-                </div>
-                </form>
-
-            </div>
-        </div>
-    </div>
 
 {% endblock contenido %}
