--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -126,7 +126,7 @@
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 1, COMPLETADA"><i class="fa fa-user-circle"></i></button>
 
             <a href="{% url 'etapa-2' %}">
-            <button class="btn btn-warning  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 2"><i class="fa fa-address-book" ></i></button>
+            <button class="btn btn-warning  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="right" title="Etapa 2"><i class="fa fa-address-book" ></i></button>
             </a> 
 
             {% elif etapa == 4 or etapa == 5 %}
@@ -136,8 +136,9 @@
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 2, COMPLETADA"><i class="fa fa-address-book" ></i></button>
 
             <a href="{% url 'etapa-3' %}">
-            <button class="btn btn-success  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="top" title="Etapa 3"><i class="fa fa-address-card-o" ></i></button>
+            <button class="btn btn-success  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="right" title="Etapa 3"><i class="fa fa-address-card-o" ></i></button>
             </a> 
+            
             {% elif etapa == 6 or etapa == 7 %}
 
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 1, COMPLETADA"><i class="fa fa-user-circle"></i></button>
