Cambios en frontend

--- a/templates/empleados/etapa_4.html
+++ b/templates/empleados/etapa_4.html
@@ -52,6 +52,8 @@
     
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
+    <link href="{% static 'css/plugins/blueimp/css/blueimp-gallery.min.css' %}" rel="stylesheet">
+
 
 {% endblock head %}
 
@@ -113,6 +115,9 @@
 
     <!-- Dual Listbox -->
     <script src="{% static 'js/plugins/dualListbox/jquery.bootstrap-duallistbox.js' %}"></script>
+
+    <!-- blueimp gallery -->
+    <script src="{% static 'js/plugins/blueimp/jquery.blueimp-gallery.min.js' %}"></script>
 
 
 {% endblock js %}
