--- a/templates/empleados/etapa_5.html
+++ b/templates/empleados/etapa_5.html
@@ -1,8 +1,6 @@
 {% extends 'tags/empty_page.html' %}
 {% load staticfiles %}
 {% load querys %}
-{% load i18n %}
-{% load static  %}
 
 {% block head %}
 
@@ -11,11 +9,10 @@
 
     <title>SpringRH | Etapa 5</title>
 
-
     <link rel="icon" type="image/png" href="{% static 'img/icono-springlabs.png' %}" />
 
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
+    
     <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/plugins/iCheck/custom.css' %}" rel="stylesheet">
@@ -28,7 +25,11 @@
 
     <link href="{% static 'css/plugins/cropper/cropper.min.css' %}" rel="stylesheet">
 
+    <link href="{% static 'css/plugins/switchery/switchery.css' %}" rel="stylesheet">
+
     <link href="{% static 'css/plugins/jasny/jasny-bootstrap.min.css' %}" rel="stylesheet">
+
+    <link href="{% static 'css/plugins/nouslider/jquery.nouislider.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/plugins/datapicker/datepicker3.css' %}" rel="stylesheet">
 
@@ -49,14 +50,15 @@
     <link href="{% static 'css/plugins/dualListbox/bootstrap-duallistbox.min.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
-    
+
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+    <link href="{% static 'css/plugins/blueimp/css/blueimp-gallery.min.css' %}" rel="stylesheet">
 
 
 {% endblock head %}
 
 {% block js %}
-
     <!-- Mainly scripts -->
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -77,6 +79,12 @@
 
    <!-- Data picker -->
    <script src="{% static 'js/plugins/datapicker/bootstrap-datepicker.js' %}"></script>
+
+   <!-- NouSlider -->
+   <script src="{% static 'js/plugins/nouslider/jquery.nouislider.min.js' %}"></script>
+
+   <!-- Switchery -->
+   <script src="{% static 'js/plugins/switchery/switchery.js' %}"></script>
 
     <!-- IonRangeSlider -->
     <script src="{% static 'js/plugins/ionRangeSlider/ion.rangeSlider.min.js' %}"></script>
@@ -113,6 +121,10 @@
 
     <!-- Dual Listbox -->
     <script src="{% static 'js/plugins/dualListbox/jquery.bootstrap-duallistbox.js' %}"></script>
+
+    <!-- blueimp gallery -->
+    <script src="{% static 'js/plugins/blueimp/jquery.blueimp-gallery.min.js' %}"></script>
+
 
 
 {% endblock js %}
@@ -186,14 +198,17 @@
             });
 
             $('#data_1 .input-group.date').datepicker({
+                language: "es",
                 todayBtn: "linked",
                 keyboardNavigation: false,
                 forceParse: false,
                 calendarWeeks: true,
-                autoclose: true
+                autoclose: true,
+                format: "dd/mm/yyyy"
             });
 
             $('#data_2 .input-group.date').datepicker({
+                language: "es",
                 startView: 1,
                 todayBtn: "linked",
                 keyboardNavigation: false,
@@ -203,20 +218,24 @@
             });
 
             $('#data_3 .input-group.date').datepicker({
+                language: "es",
                 startView: 2,
                 todayBtn: "linked",
                 keyboardNavigation: false,
                 forceParse: false,
-                autoclose: true
+                autoclose: true,
+                format: "dd/mm/yyyy"
             });
 
             $('#data_4 .input-group.date').datepicker({
+                language: "es",
                 minViewMode: 1,
                 keyboardNavigation: false,
                 forceParse: false,
                 forceParse: false,
                 autoclose: true,
-                todayHighlight: true
+                todayHighlight: true,
+                format: "dd/mm/yyyy"
             });
 
             $('#data_5 .input-daterange').datepicker({
@@ -228,6 +247,58 @@
             $('.i-checks').iCheck({
                 checkboxClass: 'icheckbox_square-green',
                 radioClass: 'iradio_square-green'
+            });
+
+            $('input[name="daterange"]').daterangepicker();
+
+            $('#reportrange span').html(moment().subtract(29, 'days').format('MMMM D, YYYY') + ' - ' + moment().format('MMMM D, YYYY'));
+
+            $('#reportrange').daterangepicker({
+                format: 'MM/DD/YYYY',
+                startDate: moment().subtract(29, 'days'),
+                endDate: moment(),
+                minDate: '01/01/2012',
+                maxDate: '12/31/2015',
+                dateLimit: { days: 60 },
+                showDropdowns: true,
+                showWeekNumbers: true,
+                timePicker: false,
+                timePickerIncrement: 1,
+                timePicker12Hour: true,
+                ranges: {
+                    'Today': [moment(), moment()],
+                    'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                    'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+                    'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                    'This Month': [moment().startOf('month'), moment().endOf('month')],
+                    'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+                },
+                opens: 'right',
+                drops: 'down',
+                buttonClasses: ['btn', 'btn-sm'],
+                applyClass: 'btn-primary',
+                cancelClass: 'btn-default',
+                separator: ' to ',
+                locale: {
+                    applyLabel: 'Submit',
+                    cancelLabel: 'Cancel',
+                    fromLabel: 'From',
+                    toLabel: 'To',
+                    customRangeLabel: 'Custom',
+                    daysOfWeek: ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr','Sa'],
+                    monthNames: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
+                    firstDay: 1
+                }
+            }, function(start, end, label) {
+                console.log(start.toISOString(), end.toISOString(), label);
+                $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+            });
+
+            $(".select2_demo_1").select2();
+            $(".select2_demo_2").select2();
+            $(".select2_demo_3").select2({
+                placeholder: "Select a state",
+                allowClear: true
             });
 
 
@@ -313,45 +384,45 @@
             hideFromTo: false
         });
 
+        $(".dial").knob();
+
+        var basic_slider = document.getElementById('basic_slider');
+
+        noUiSlider.create(basic_slider, {
+            start: 40,
+            behaviour: 'tap',
+            connect: 'upper',
+            range: {
+                'min':  20,
+                'max':  80
+            }
+        });
+
+        var range_slider = document.getElementById('range_slider');
+
+        noUiSlider.create(range_slider, {
+            start: [ 40, 60 ],
+            behaviour: 'drag',
+            connect: true,
+            range: {
+                'min':  20,
+                'max':  80
+            }
+        });
+
+        var drag_fixed = document.getElementById('drag-fixed');
+
+        noUiSlider.create(drag_fixed, {
+            start: [ 40, 60 ],
+            behaviour: 'drag-fixed',
+            connect: true,
+            range: {
+                'min':  20,
+                'max':  80
+            }
+        });
 
 
-
-    </script>
-
-        <script type="text/javascript">
-
-    function yesnoCheck() {
-        if (document.getElementById('id_estado_civil_1').checked) {
-            document.getElementById('visa_1').style.display = 'block';
-        }
-        else if (document.getElementById('id_estado_civil_2').checked) {
-            document.getElementById('visa_1').style.display = 'block';
-        }
-        else{
-            document.getElementById('visa_1').style.display = 'none';
-        }
-
-        if (document.getElementById('id_SiNo_0').checked) {
-
-            document.getElementById('Si').style.display = 'none';
-        }
-        else
-        {
-            document.getElementById('Si').style.display = 'block';
-        }
-
-        if (document.getElementById('id_permiso_trabajo').checked) {
-
-            document.getElementById('id_solicitud_permiso_trabajo').style.display = 'none';
-            document.getElementById('id_solicitud_permiso_trabajo').checked = false;
-        }
-        else
-        {
-            document.getElementById('id_solicitud_permiso_trabajo').style.display = 'block';
-        }
-
-
-    }
     </script>
 
 {% endblock scripts %}
@@ -396,6 +467,94 @@
 
 {% block contenido %}
 
+<div class="wrapper wrapper-content animated fadeIn">
+    <div class="row">
+        <div class="col-lg-12">
 
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <i class="fa fa-vcard-o"></i> <strong>Sección 1</strong>
+                </div>
+                <div class="panel-body">
 
+<form class="form-horizontal" method="post" role="form" action="" enctype="multipart/form-data">
+{% csrf_token %}
+                        {% if empleado.status == 8 %}
+                            <div class="alert alert-dismissable alert-warning">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <strong>Rellene solo los campos que según su condición apliquen.</strong>
+                            </div>
+                            {{Formulario.as_p}}
+                        {% elif empleado.status == 9 %}
+                            <label>Nivel de estudios: </label> {{estudios.nivel_estudios}}<br>
+                            {% if estudios.universidad != '' %}
+                                <label>Universidad: </label>{{estudios.universidad}}<br>
+                            {% endif %}
+                            {% if estudios.titulo != '' %}
+                                <label>Título: </label>
+                                {{estudios.titulo}}<br>
+                            {% endif %}
+                            {% if estudios.carrera != '' %}
+                                <label>Carrera: </label>
+                                {{estudios.carrera}}<br>
+                            {% endif %}
+                            {% if estudios.cedula_profesional.cedula %}
+                                <label>Cédula profesional: </label>
+                                {{estudios.cedula_profesional.cedula}}<br>
+                            {% endif %}
+                        {% else %}
+                        {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% if empleado.status == 9 %}
+
+<div class="lightBoxGallery">
+
+    <div>
+
+        {% if estudios.cedula_profesional.imagen_cedula_profesional %}
+        <a href="{{estudios.cedula_profesional.imagen_cedula_profesional.url}}" title="Cédula profesional" data-gallery=""><img src="{{estudios.cedula_profesional.imagen_cedula_profesional.url}}" height="165" width="165"></a>
+        {% endif %}
+
+        {% if estudios.constacia_de_estudio %}
+        <a href="{{estudios.constacia_de_estudio.url}}" title="Constancia de estudios" data-gallery=""><img src="{{estudios.constacia_de_estudio.url}}" height="165" width="165"></a>
+        {% endif %}
+
+        <div id="blueimp-gallery" class="blueimp-gallery">
+            <div class="slides"></div>
+            <h3 class="title"></h3>
+            <a class="prev">‹</a>
+            <a class="next">›</a>
+            <a class="close">×</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
+        </div>
+
+    </div>
+
+    <div class="col-lg-12">
+         <span>
+            <br>
+         </span>
+    </div>
+    <div class="col-lg-12">
+        <a class="btn btn-success btn-rounded" href="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Editar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+        <a class="btn btn-primary btn-rounded" href="">&nbsp;&nbsp;Confirmar&nbsp;&nbsp;</a>
+    </div>
+{% else %}
+    <div class="col-lg-12">
+        <button type="submit" class="btn btn-block btn-rounded btn-primary">Aceptar</button>
+    </div>
+{% endif %}
+    <div class="col-lg-12">
+         <span>
+            <br>
+         </span>
+    </div>
+</div>
+</form>
 {% endblock contenido %}
