--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -151,7 +151,7 @@
             <button class="btn btn-danger  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="right" title="Etapa 4"><i class="fa fa-group" ></i></button>
             </a> 
 
-            {% elif etapa == 8 or etapa == 9 %}
+            {% elif etapa == 8 or etapa == 9 or etapa == 10 %}
 
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 1, COMPLETADA"><i class="fa fa-user-circle"></i></button>
 
