--- a/templates/empleados/etapa_5.html
+++ b/templates/empleados/etapa_5.html
@@ -521,7 +521,7 @@
 </div>
 {% endif %}
 
-{% if empleado.status == 10 %}
+{% if empleado.status == 10 or empleado.status == 11 or empleado.status == 12 %}
 <div class="wrapper wrapper-content animated fadeIn">
     <div class="row">
         <div class="col-lg-4">
@@ -592,12 +592,12 @@
             </div>
         </div>
         <div class="col-lg-8">
-
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-vcard-o"></i> <strong>Sección 2</strong>
                 </div>
                 <div class="panel-body">
+                {% if empleado.status == 10 %}
                     {{ Cursos.as_p }}
                     <div class="col-lg-8">
                          <span>
@@ -657,9 +657,166 @@
                     <p class="text-right">
                     <button type="submit" class="btn btn-block btn-rounded btn-success">Agregar</button>
                     </p>
+                {% else %}
+                    {% if cursos %}
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>Cursos</h5>
+                                        <div class="ibox-tools">
+                                            <a class="collapse-link">
+                                                <i class="fa fa-chevron-up"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="ibox-content">
+
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Tipo</th>
+                                                <th>Nombre</th>
+                                                <th>Acción</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            {% for capacitacion in cursos %}
+                                            <tr>
+                                                <td>{{forloop.counter}}</td>
+                                                <td>{{capacitacion.tipo_curso}}</td>
+                                                <td>{{capacitacion.nombre_curso}}</td>
+                                                <td>
+                                                    <a href="{{capacitacion.certificado.url}}" target="_blank">
+                                                    <p class="text-success">Ver</p></a>
+                                                </td>
+                                            </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% else %}
+                        <strong>Ningún curso o capacitación</strong>
+                    {% endif %}
+                {% endif %}
                 </div>
             </div>
         </div>
+        {% if empleado.status == 11 or empleado.status == 12 %}
+        <div class="col-lg-8">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <i class="fa fa-vcard-o"></i> <strong>Sección 3</strong>
+                </div>
+                <div class="panel-body">
+                {% if empleado.status == 11 %}
+                    {{Idiomas.as_p}}
+                    <div class="col-lg-8">
+                         <span>
+                            <br>
+                         </span>
+                    </div>
+                    {% if idiomas %}
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>idiomas</h5>
+                                        <div class="ibox-tools">
+                                            <a class="collapse-link">
+                                                <i class="fa fa-chevron-up"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="ibox-content">
+
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Idioma</th>
+                                                <th>Nivel escrito</th>
+                                                <th>Nivel hablado</th>
+                                                <th>Acción</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            {% for idioma in idiomas %}
+                                            <tr>
+                                                <td>{{forloop.counter}}</td>
+                                                <td>{{idioma.idioma}}</td>
+                                                <td>{{idioma.nivel_escrito}}</td>
+                                                <td>{{idioma.nivel_hablado}}</td>
+                                                <td>
+                                                    <a href="{% url 'borrar-idioma' idioma.id %}">
+                                                    <p class="text-danger">Borrar</p></a>
+                                                </td>
+                                            </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+                    <p class="text-right">
+                    <button type="submit" class="btn btn-block btn-rounded btn-success">Agregar</button>
+                    </p>
+                {% else %}
+                    {% if idiomas %}
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>Idiomas</h5>
+                                        <div class="ibox-tools">
+                                            <a class="collapse-link">
+                                                <i class="fa fa-chevron-up"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="ibox-content">
+
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Idioma</th>
+                                                <th>Nivel escrito</th>
+                                                <th>Nivel hablado</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            {% for idioma in idiomas %}
+                                            <tr>
+                                                <td>{{forloop.counter}}</td>
+                                                <td>{{idioma.idioma}}</td>
+                                                <td>{{idioma.nivel_escrito}}</td>
+                                                <td>{{idioma.nivel_hablado}}</td>
+                                            </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% else %}
+                    <strong>Ningún idioma</strong>
+                    {% endif %}
+                {% endif %}
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endif %}
@@ -705,7 +862,18 @@
 {% endif %}
 {% if empleado.status == 10 %}
     <div class="col-lg-12">
-        <a class="btn btn-primary btn-rounded" href="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aceptar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+        <a class="btn btn-primary btn-rounded" href="{% url 'confirma-status-10' %}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aceptar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+    </div>
+{% endif %}
+{% if empleado.status == 11 %}
+    <div class="col-lg-12">
+        <a class="btn btn-primary btn-rounded" href="{% url 'confirma-status-11' %}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aceptar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+    </div>
+{% endif %}
+{% if empleado.status == 12 %}
+    <div class="col-lg-12">
+        <a class="btn btn-success btn-rounded" href="{% url 'rechaza5' %}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Editar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+        <a class="btn btn-primary btn-rounded" href="{% url 'confirma5' %}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Confirmar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
     </div>
 {% endif %}
 {% if empleado.status == 8 %}
